[package]
name = "temperature-control-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.12.0"
actix-web = "4.1.0"
actix-files = "0.6.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = {version ="0.4.19", features=["serde"]}
rusqlite = {version = "0.27.0", features=["bundled"]}
serde_json = "1.0.81"